[project]
name = "fuzzable"
version = "2.0.6"
description = "Framework for Automating Fuzzable Target Discovery with Static Analysis"
authors = [
    {name = "ex0dus", email = "ex0dus@codemuch.tech"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["security", "fuzzing", "vulnerability-research", "binary-analysis"]

dependencies = [
    "typer[all]>=0.6.1",
    "angr>=9.2.8",
    "lief>=0.14.0",
    "tree-sitter>=0.20.0",
    "scikit-criteria>=0.7",
    "pycparser<3.0",
    "jpype1>=1.6.0",
]

[project.optional-dependencies]
ghidra = ["jpype1>=1.5.0"]

[project.scripts]
fuzzable = "fuzzable.__main__:app"

[project.urls]
Homepage = "https://codemuch.tech/fuzzable"
Repository = "https://github.com/ex0dus-0x/fuzzable"
Documentation = "https://github.com/ex0dus-0x/fuzzable/wiki"

[dependency-groups]
dev = [
    "pytest>=7.1.2",
    "black>=22.6.0",
    "mypy>=0.961",
    "pylint>=2.14.5",
    "githubrelease>=1.5.9",
    "GitPython>=3.1.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target_version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.github
    | _build
    | buck-out
    | build
    | docs
    | dist
  )/
  | Dockerfile
)
'''
